--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -134,7 +134,6 @@ a {
 }
 
 .infoPanel, .codePanel{
-	border: dotted;
 	min-height: 98dvh;
 }
 .codePanel {
@@ -143,10 +142,13 @@ a {
 
 .infoPanel{
 	width: 45%;
+	padding-top: 6px;
+	padding-left: 6px;
+	padding-right: 10px;
 }
 
 .codePanel textarea{ 
-	min-height: 98dvh;
+	min-height: 90dvh;
 	max-width: 85%;
 	width: 100%;
 	font-family: "REM", serif;
@@ -156,4 +158,13 @@ a {
 
 .descArea {
 	white-space: pre-wrap;
+}
+
+.buttonBack {
+	border-radius: 6px;
+	background-color:#a00000;
+	color: #FDFDFD;
+	font-family: "Outfit", sans-serif;
+	border-width: 0.5px;
+	font-size: medium;
 }
